@@ -941,6 +941,7 @@
 	  For more details and examples see the chapter on special functions
 	  in <lit>genr</lit> in <guideref targ="sec:genr-numerical"/>.
 	  <seelist>
+	    <fncref targ="NRmax"/>
 	    <fncref targ="fdjac"/>
 	  </seelist>
 	</para>
@@ -3852,6 +3853,51 @@
 	<para>
 	  <seelist>
 	    <fncref targ="irr"/>
+	  </seelist>
+	</para>
+      </description>
+    </function>
+
+    <function name="NRmax" section="numerical" output="scalar">
+      <fnargs>
+	<fnarg type="vector">b</fnarg>
+	<fnarg type="fncall">f</fnarg>
+	<fnarg type="fncall" optional="true">g</fnarg>
+	<fnarg type="fncall" optional="true">h</fnarg>
+      </fnargs>
+      <description>
+	<para>
+	  Numerical maximization via the Newton&ndash;Raphson method.
+	  The vector <argname>b</argname> should hold the initial
+	  values of a set of parameters, and the argument
+	  <argname>f</argname> should specify a call to a function
+	  that calculates the (scalar) criterion to be maximized,
+	  given the current parameter values and any other relevant
+	  data. If the object is in fact minimization, this function
+	  should return the negative of the criterion.  On successful
+	  completion, <lit>NRmax</lit> returns the maximized value of
+	  the criterion, and <argname>b</argname> holds the parameter
+	  values which produce the maximum.
+	</para>
+	<para>
+	  The optional third and fourth arguments provide means of
+	  supplying analytical derivatives and an analytical
+	  (negative) Hessian, respectively. The functions referenced
+	  by <argname>g</argname> and <argname>h</argname> must take
+	  as their first argument a pre-defined matrix that is of the
+	  correct size to contain the gradient or Hessian,
+	  respectively, given in pointer form. They also must take the
+	  parameter vector as an argument (in pointer form or
+	  otherwise).  Other arguments are optional. If either or
+	  both of the optional arguments are omitted, a numerical
+	  approximation is used.
+	</para>
+	<para>
+	  For more details and examples see the chapter on special functions
+	  in <lit>genr</lit> in <guideref targ="sec:genr-numerical"/>.
+	  <seelist>
+	    <fncref targ="BFGSmax"/>
+	    <fncref targ="fdjac"/>
 	  </seelist>
 	</para>
       </description>
