@@ -78,6 +78,13 @@ double user_BFGS (gretl_matrix *b,
 		  double ***pZ, DATAINFO *pdinfo,
 		  PRN *prn, int *err);
 
+double user_NR (gretl_matrix *b, 
+		const char *fncall,
+		const char *gradcall, 
+		const char *hesscall,
+		double ***pZ, DATAINFO *pdinfo,
+		PRN *prn, int *err);
+
 gretl_matrix *fdjac (gretl_matrix *theta, const char *fncall,
 		     double ***pZ, DATAINFO *pdinfo,
 		     int *err);
